fix : tournamentResult button align center

--- a/frontend/scss/tournament-result.scss
+++ b/frontend/scss/tournament-result.scss
@@ -478,3 +478,11 @@ h2 {
 .tournament-bracket__medal--bronze {
   color: #CD7F32;
 }
+
+.btn {
+  margin-top: 10%;
+  margin-left: 44%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
